Bug 1823333 [VAAPI] Fix FEATURE_HW_DECODED_VIDEO_ZERO_COPY handling as it's allowlisted feature r=gfx-reviewers,aosmond, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D173573