widget/gtk/GfxInfo.cpp
@@ -819,7 +819,13 @@ const nsTArray<GfxDriverInfo>& GfxInfo::GetGfxDriverInfo() {
                                "FEATURE_HARDWARE_VIDEO_DECODING_DISABLE", "");
 #endif
     ////////////////////////////////////
-    // HW_DECODED_VIDEO_ZERO_COPY
+    // FEATURE_HW_DECODED_VIDEO_ZERO_COPY - ALLOWLIST
+    APPEND_TO_DRIVER_BLOCKLIST2(OperatingSystem::Linux, DeviceFamily::All,
+                                nsIGfxInfo::FEATURE_HW_DECODED_VIDEO_ZERO_COPY,
+                                nsIGfxInfo::FEATURE_ALLOW_ALWAYS,
+                                DRIVER_COMPARISON_IGNORED, V(0, 0, 0, 0),
+                                "FEATURE_ROLLOUT_ALL");
+
     // Disable on all AMD devices using Mesa (Bug 1802844).
     APPEND_TO_DRIVER_BLOCKLIST_EXT(
         OperatingSystem::Linux, ScreenSizeStatus::All, BatteryStatus::All,
